# sub2api-usage

./: .gitignore  LICENSE  README.md  pyproject.toml  sub2api_usage.py
.github/workflows/: ci.yml  publish.yml
tests/: test_admin_search.py  test_admin_windows.py  test_cli_defaults.py  test_profiles.py  test_usage_summary.py
